@@ -1,38 +1,49 @@
-AUX geant-4.9.2-zlib.patch 239 RMD160 790953077b7fc59d1ce7c3ed98cdb3dcc3134705 SHA1 7a0552dab08873665b8668a21a8c52841c8e5ae2 SHA256 f5ceee577afeb719718cd23887f9c1eba322077dce1f3d89bc075bacd63e5573
-AUX geant-4.9.3-respect_flags.patch 3731 RMD160 b7ab40cbda0557639605bc9d8285a48af893f3c7 SHA1 88c4cdede3a86d1c41e589ece95a7fc6d74969dc SHA256 7b877a11325a9eb8bc208473622f03189a47b42d01e6fc53836f2aa70b282739
-AUX geant-4.9.3-zlib.patch 613 RMD160 192c6ac17d47eee4c9f116ceb96850e12390455a SHA1 070e01d43cb953e5bfbbefdbdbb5433ea583c54e SHA256 9b83cd998fa08c4312f0a56c1e72f7611217b1bde4b8553fd5e6735592b6cfc1
-AUX geant-4.9.4-datadir.patch 2203 RMD160 251419f9780cda5a7eb527201da9568af34da0f1 SHA1 761b40db8d3ad73fbf4f3004f902db64c668f576 SHA256 3c97d883732299ecb008d6c114d92556a937b93966ec21fb612809b03d0a95f8
-AUX geant-4.9.4-libdir.patch 1328 RMD160 518d42f5e9263828c3f90fdbde3d1d352d4b21a8 SHA1 8bd752545466909bee69adc89850f0529ed1a4ef SHA256 36f43915868ea87f2b80c9ea360b24726389a8839ef06323e58a08fdf5833338
-AUX geant-4.9.4-no-benchmarks.patch 370 RMD160 759b19161b950963a04cb6bd7b7dadb918c7fd08 SHA1 8c1bec8775809e5e4655269ee136f294204151c6 SHA256 5ff40079b5669335b1701831fba3922b525d2fdd594704750111d7eaea45b693
-AUX geant-4.9.4-no-examples.patch 486 RMD160 7ef349c41d31041af9b5edfd3e82c5fbcfbbae6a SHA1 314a826f5671edbc237e7a960d8c944af3463560 SHA256 4ae8e7bc5790b5cb207d440bd3c05e81196528517af2f32c0e3483ed41d12d99
-AUX geant-4.9.4-trajectory.patch 390 RMD160 4e654e0ff42c2c1b1c2320e2deb6f8ff0f3d45e6 SHA1 2adba855b88f7461d4dc14dfa4e958c97e90c682 SHA256 6e4c0b2a44960411132130d379f6c9a7f867a656e4851ac9b1fd584685ae204c
-AUX geant-4.9.4-zlib.patch 1014 RMD160 bbafd66c1014a84cc8a7445a26f2314e4abb359f SHA1 f1c2ec1e8fa514f4dd2d22ec88d6217a24dc03b4 SHA256 fa7d09b2a481b9183f6f1518e2490458b616c41a90824e6d6a37ca08bddc06b5
-AUX geant-4.9.5-scripts-only-dataenv.patch 2046 RMD160 0ca3d69afc2fdf07ad0dfb0ed256434ba8b5ebde SHA1 1777776d7b7435a27aec9c97cc9f2da69c6f7802 SHA256 1b878d401e117337d0d6c6b65fea33716eb482d3ddc243fa19c705474274f12a
-AUX geant-4.9.5_p01-scripts-only-dataenv.patch 2047 RMD160 6811e289da2f3b874f93ea9db7627f8baae995fb SHA1 f24fcb10cca91d866630fdc50172c046844af79a SHA256 db809c4866129cb9c9f2eabdf3e0decf25a3f97b8a4742a6de5b76ff3ce452f6
-DIST G4ABLA.3.0.tar.gz 54909 RMD160 5a032ee8e90d00f39b67114fe257ec47001f347b SHA1 5f38676f1650a508e49d35f9405ac96984388135 SHA256 ff0b77be6b36204eeeba71099f6b7530edd80b79eb015994535bc4334bc821eb
-DIST G4EMLOW.6.19.tar.gz 14396144 RMD160 ba67b3f1ee215966adc99661a1db4a5bf09c5511 SHA1 f63e41a43a3d0c793a04dbb6cce0bdcfeedf6889 SHA256 8876defe74e4c1e9d6b58b2365a9b468ac8d996fb63fa1c6ba6240e0b185845f
-DIST G4EMLOW.6.2.tar.gz 8389172 RMD160 fa51dbb4f0e316b0e682a05c9db4c1dc29db7218 SHA1 627ca63927064f1846aa8d7e2e5c4783fe0b9610 SHA256 1affbc66d8809db0c8e450ca83a0da744e7f5b8e912ec52e93b1f24b47cbd781
-DIST G4NDL.3.13.tar.gz 57034762 RMD160 243b206170d996c7b562a86e388ff4d5f8d11764 SHA1 4acc412a2f29a7a8f84ac50aeb7331c8ed2889ae SHA256 e994b873032b3d1c0bcc2679275c43354d3e1cd5091da76c8fcd4826536f17a3
-DIST G4NDL.3.14.tar.gz 58794491 RMD160 8393b5e0301526ec747da133b6972c70b8c44210 SHA1 dc8b7a5fa0fcd06a85071c1b09730de6d04362d3 SHA256 08ff1d4fb0953f2502d88f76fb9db1d4314c975564731f11c9372d0ea992cafa
-DIST G4NEUTRONXS.1.0.tar.gz 1186619 RMD160 c8ddf1d50e7fdbc3d53959bb45bb84615467f96d SHA1 9904ffccc3053cf6d48441e6a1e55fa1a3360766 SHA256 577d28b7faa41caacb001a30384028cd5e3b7018755ab94a427ce0a7feeab365
-DIST G4PII.1.2.tar.gz 3387814 RMD160 6f7553941ce2130c7f463a2ec7613c801792ccfb SHA1 65e72c1507370c0cdbc2505bb02083e04fd5667c SHA256 80e680d7343ed051bcfffd910c682cfd66980cecd1c0bc435f06c6c740a6f99d
-DIST G4PhotonEvaporation.2.1.tar.gz 7504003 RMD160 be5e5ef9db4b85f916017561cc2dfbc5a1b226d7 SHA1 56937f579e2134259963093ca735afc2b5a6ec5c SHA256 08ab657a060518c9b7aab03b17628cbb31585ee9512e0f2033f2fb0d7d9b2bc7
-DIST G4RadioactiveDecay.3.2.tar.gz 761070 RMD160 1f797977c0c66722f4b032ac546c26eaa8a9f14a SHA1 45e706e46a33e08b1706f069d15e8c2145f3410e SHA256 31dc70aa59cb86ef0dbaf96c639e0541b7569d4fc98f92064ecdc8bc4b9c839b
-DIST G4RadioactiveDecay.3.3.tar.gz 732628 RMD160 065769a13b45dd335a6c6bd3b265c6d0370dcf96 SHA1 877a31ddf673729aad5b5f5892333495a1803784 SHA256 7f421d6808422f9186a8a96fc1889a54af03c80a37b9f9d1d51ab359ea0264d1
-DIST PhotonEvaporation.2.0.tar.gz 7506068 RMD160 24d46b08b2ffeca5b3be186baffb650b99accc97 SHA1 df3b4994c7248da7a226c186be747c4b823d34fa SHA256 5aac0ce683ca23274a7736c8e8911d8cf32d2bf33aab33a9a23126664762d61d
-DIST RealSurface.1.0.tar.gz 1257863 RMD160 030513fe340e0cccbfe0b9ae9acb3ba6b5291ebb SHA1 9b4bd95c647dc702458eeaf89ebf62c5885e2ece SHA256 3e2d2506600d2780ed903f1f2681962e208039329347c58ba1916740679020b1
-DIST geant321_3.21.14.dfsg-8.diff.gz 41909 RMD160 4edbe5d3dd93a78198fa2d2d83770c8b85eee4de SHA1 39f48c4263f543b74eee6095c11f5ade9798f253 SHA256 785277dab1e1d3e17d60c85f3826bc67bbd6de7e6a6d40ff7af901371c4d2ce1
-DIST geant321_3.21.14.dfsg-9.diff.gz 47589 RMD160 78561bba0c79a13d34f64c4594cf73019b3f8a0a SHA1 1622441f91e850e1918e6e686d2ae44b0348f243 SHA256 419bc2315e2692fe84b353d445cbae7af995d84a6a0290b7f9051ee041243d20
-DIST geant321_3.21.14.dfsg.orig.tar.gz 10922928 RMD160 253b35bd9cda82c2213ec042274f7e6ff6b9e333 SHA1 ae6f39ccc18eacd576a3493992db5da3b3d3b128 SHA256 186fe98a08ad1de39f68698a09a46e7c2f14c37b22f8f990257b0bd66215c5b4
-DIST geant4.9.2.p02.tar.gz 18822956 RMD160 1b8923c4821ca627b56919b3c1eeb3b6a09dd0e5 SHA1 007ee6d4eb4f6479f3fe46e6ecff882e3ace1e7c SHA256 4d19bb76bf956004481bc433bf4735780ccc6354d3dc53321d532fd283243078
-DIST geant4.9.4.p03.tar.gz 25241424 RMD160 af3a64517bac181366c3a680d3723fbe7edd3ebb SHA1 4d1f46471446c210a85edae8d4759803e55bea28 SHA256 5090ca5b506238f16ba2ae2176221a18b6fde06f91180850a109fae1006910c0
-DIST geant4.9.5.p01.tar.gz 28466803 RMD160 42249229a97c2eaf5ed2471a93608a1d0daa38e1 SHA1 b1b938f735a8b966621704cc77448c786777dd01 SHA256 451f8c4a29bb0dc4b923d59d77535a657f0f8a30dc6c8ef639c8b1ebdb26a10e
-DIST geant4.9.5.tar.gz 28458437 RMD160 24e78b5243aa9ec47a48bbcb6d2afb4d9fe22dbf SHA1 846b48e82c1709d77a8f490fd12b039acc1d0cf9 SHA256 b6b31752319805052fb765f89ca38a23fb299a0a5bf900daeacd1950d6c9a597
-EBUILD geant-3.21.14-r2.ebuild 1885 RMD160 2022b046c7f52a4687948387cd7a084e2b0d19e1 SHA1 ea5a80bb06da07183946a96db02e2d0158b24312 SHA256 6d410dc45b374c86bd34c3ca3eaa740fc5eb91dcb91df86497b6c906e4577d93
-EBUILD geant-3.21.14-r3.ebuild 1719 RMD160 7158c53cb2f0e1098fd5f6d5249029fffe35cf3a SHA1 10f67d4d0c17aab06ce4f50fa3f2393a792c426b SHA256 5bb8f71e86a5f5562f0aab9f86f14937e863dffd2b9e1bb502fd5ba9a120f1b9
-EBUILD geant-4.9.2_p02.ebuild 8145 RMD160 3d1a138202fe2e3151ad684c18cec0e7a4dccbfc SHA1 d813033ebcae3ef491aae7a9a794ef63a8813d8d SHA256 02920927f1eb081a9753f7ac9c8a282d036955750796bbbd6b007fa55f6c1e26
-EBUILD geant-4.9.4_p03.ebuild 2394 RMD160 a9631f493908ac8e7313a7dd77828af97b4c7683 SHA1 617ad20ade4105cddc33e8a311060b9486bcd77b SHA256 2373fdb4fed0cd0f10c050f82ddb57995c60618b524e89ca44f4ca951d451f48
-EBUILD geant-4.9.5-r1.ebuild 3051 RMD160 1fb92013250a9f81b79c06fcc3bcdf7d2c3ed164 SHA1 ceaf06daf6e40d971712096ea62de7808a4f5d7f SHA256 d6f7e35a8b1e21333d1103918e5b2ce0c2b05cc48bd821c2104428694dcf2f08
-EBUILD geant-4.9.5_p01.ebuild 3045 RMD160 c3effd68c1be99dcf26e4183358e2e851b72e239 SHA1 424b1174dc4dc985caab7f864c9235754fac6e37 SHA256 0eb89ba5632b5025a27db108a66f2aa86fbc55577cf64ed33f1401f13a12a2d6
-MISC ChangeLog 12469 RMD160 e6d19c2833845a075f8997d69aefcae263c9442d SHA1 3df0c888499229d6e73095ba7ff0578bdc9a0eae SHA256 bd8188ac957561adeb38b9fcc7164c8899db0d318b99d835e99de59a08d86882
-MISC metadata.xml 1569 RMD160 b4e64715d0d29b17b7fc46da45f4ebbff41fc380 SHA1 b30f9de8adea84a688b1343115afa304d5b0de4f SHA256 532c396760c97bbf207439e4f189679bbe02fda61d33446beeebc5f855b36f63
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
+AUX geant-4.9.2-zlib.patch 239 SHA256 f5ceee577afeb719718cd23887f9c1eba322077dce1f3d89bc075bacd63e5573 SHA512 fd9cad3ee5ac84ce32147e235fb3f1700a45c0bf6b18171c797ef08d239311755c730763e27ba7aaee3cce5a7af6cf71be3db90d69fafc7544c6ad94bd2a4d0d WHIRLPOOL 414656f71775390ed621a0ac449ce662d056437ea8bfae701cd21fdae915c4c6bdccd7276dd8cb6c27233b2e3309d70e9866e65e66be763ab7589af1b0a103c5
+AUX geant-4.9.3-respect_flags.patch 3731 SHA256 7b877a11325a9eb8bc208473622f03189a47b42d01e6fc53836f2aa70b282739 SHA512 902a682a72de45a48fce7e16179e898df9546792984b08e7bc294059de0f93ab85319b245d200b0f4967b7a91e0a86b763035149c674a70f8eb5fee79b7d8ddd WHIRLPOOL 56695dbdacbeaf713e1a8645f9c18b27777179806d65e36349a5675f8b6687ef5e0db190cfe6cfb4d6531b6bcf58849681807d94d0c3b62ca0feae0942429c6e
+AUX geant-4.9.3-zlib.patch 613 SHA256 9b83cd998fa08c4312f0a56c1e72f7611217b1bde4b8553fd5e6735592b6cfc1 SHA512 352a93a3eb668a359fb8d94c06013a7843734df37a3b051704a8d54313f57d9d422ebb435bb65b8c1eda89810789ec2d96d71d4477aa63195c97fdee8b6ebf90 WHIRLPOOL 47dfca1bc9c3daff1b58935224e2d74e449ba2916c20724e3b1698feb2a7d9338de63571fc50b8bcbc4b3b52810c2d35dcc8e3cdefed2c53e3d20646a4a45bfc
+AUX geant-4.9.4-datadir.patch 2203 SHA256 3c97d883732299ecb008d6c114d92556a937b93966ec21fb612809b03d0a95f8 SHA512 d0f9cd8da02f7820917f2b9b0ae61412a457dca387d0bf8e0ea216b4e0648f3d1aa2a6ae45134b8870a7fd9bd2c763684a465ee648ed6bdfa7fc8c12ae603899 WHIRLPOOL d18d3b0dd0c00ef9943d937b4679566df2bc7893f06bc2c93b9cd3b09f4d21b112a7270e1f57b150b6dd36945b243d0251897e6258c4eaca40e5b266d2dccb8d
+AUX geant-4.9.4-libdir.patch 1328 SHA256 36f43915868ea87f2b80c9ea360b24726389a8839ef06323e58a08fdf5833338 SHA512 816f995504c2a98e3d8c89da5baa0a416b7342d4b3297ac2643a2b74fb8456dc28c01bbf61ca6558efdf87d81c742e27a039a31b6b9c091c66c5c8b3dcc61558 WHIRLPOOL 21887a59415c682046e8a7eb296169f6517c2096f01d54956923aecf5de9ec480f07683b099da3898774bb72f483c08f3e5c75f60fbcc80e933e422f9ad3365f
+AUX geant-4.9.4-no-benchmarks.patch 370 SHA256 5ff40079b5669335b1701831fba3922b525d2fdd594704750111d7eaea45b693 SHA512 3ff8ae180c94d689edccb5698f2d436583ed11023cf3aa6f6c9aeb036f8a1041816278dc8e70a71ac6b9d8f9783b278255fb218f8297f1536993b82755e720b7 WHIRLPOOL dba193eb35410468509dafc5ab2ec2ab4783498373e10c277551b2d45431115b68b4ab815273dd155e6b4cd973231e817a754cc2c6bc9cd41b05a106877b550f
+AUX geant-4.9.4-no-examples.patch 486 SHA256 4ae8e7bc5790b5cb207d440bd3c05e81196528517af2f32c0e3483ed41d12d99 SHA512 353e044dd011f98e39c708f10ac7cb4a684a4e7d9281213021fde104e75cdb71992a78c566c0b8932ec6e728e1dfdd5e290bcc712d165f701aff717e60cf60c9 WHIRLPOOL ce1faca938e2185766f57ae01f5301abe699e689b99efb3f8afe9b70c46ccc4e5ed06205d309fa23470552fa470f6350a032396d9ce53fd42190d88b290feef2
+AUX geant-4.9.4-trajectory.patch 390 SHA256 6e4c0b2a44960411132130d379f6c9a7f867a656e4851ac9b1fd584685ae204c SHA512 0fb5db19eccefc22616ed8626287edf86eb2d1bf022044138b818dd9111f44fd3850936a04bdc3a4b27bb53c7faa617692351416f68475cf6bd38a94822a2407 WHIRLPOOL aae8590a20ca542c1b50178d7d9e76881fad3405f165d133d81d3ad4ea66621ba76acc79d7d56346c355c7fca783e998bc740ba0c223e2cbb874b12d3909b201
+AUX geant-4.9.4-zlib.patch 1014 SHA256 fa7d09b2a481b9183f6f1518e2490458b616c41a90824e6d6a37ca08bddc06b5 SHA512 d345e73f5413492df3b7aa2505e651ee073bfea824c6673c7d284eef39070368bf3d17fed72544f0427977b707ad26f6374a4a8b06170a4394d53f1e638a94eb WHIRLPOOL 510a768553893604a8cbb4a2a172fe61ad60ea767d02eb39ae56b844431ff8434f8e5b03a5c46a110768ef65714808e3181de09bfc42283f13ed51a72bb6a7b8
+AUX geant-4.9.5-scripts-only-dataenv.patch 2046 SHA256 1b878d401e117337d0d6c6b65fea33716eb482d3ddc243fa19c705474274f12a SHA512 b4f8dc1ceb9ae5fcb6c14b9be92a93ab4766b3a2f88a78a0ad522ceb97240156fdcebb88a50c921386ca87fb3bd7dcec142deda9a52bdd2075857ae22e4bba65 WHIRLPOOL 4de0539d10fcf915658614b68e791fb03e18eb2fd5c7f1df780721a779d2badf67bcd71c02bf932a3816cc5f29ea767627445d40140735feea3d00d68f370823
+AUX geant-4.9.5_p01-scripts-only-dataenv.patch 2047 SHA256 db809c4866129cb9c9f2eabdf3e0decf25a3f97b8a4742a6de5b76ff3ce452f6 SHA512 7a0a719f296b8c186fa6a8196fc0a89338f960ed7399a5ce624a7bf794d34819ebc6ddc69cdfdca09194c7e0c83a4d05cae46f06792c1e7e7159cd93231c4040 WHIRLPOOL 33bcb6a9ec9a53120ccd170ee56276c6a660c9739762e8c76b4da6c3f55b811a64e9f8f946911b7662359f18069c138ac47f3d4509b73cbfb426204a620d1ff6
+DIST G4ABLA.3.0.tar.gz 54909 SHA256 ff0b77be6b36204eeeba71099f6b7530edd80b79eb015994535bc4334bc821eb
+DIST G4EMLOW.6.19.tar.gz 14396144 SHA256 8876defe74e4c1e9d6b58b2365a9b468ac8d996fb63fa1c6ba6240e0b185845f
+DIST G4EMLOW.6.2.tar.gz 8389172 SHA256 1affbc66d8809db0c8e450ca83a0da744e7f5b8e912ec52e93b1f24b47cbd781
+DIST G4NDL.3.13.tar.gz 57034762 SHA256 e994b873032b3d1c0bcc2679275c43354d3e1cd5091da76c8fcd4826536f17a3
+DIST G4NDL.3.14.tar.gz 58794491 SHA256 08ff1d4fb0953f2502d88f76fb9db1d4314c975564731f11c9372d0ea992cafa
+DIST G4NEUTRONXS.1.0.tar.gz 1186619 SHA256 577d28b7faa41caacb001a30384028cd5e3b7018755ab94a427ce0a7feeab365
+DIST G4PII.1.2.tar.gz 3387814 SHA256 80e680d7343ed051bcfffd910c682cfd66980cecd1c0bc435f06c6c740a6f99d
+DIST G4PhotonEvaporation.2.1.tar.gz 7504003 SHA256 08ab657a060518c9b7aab03b17628cbb31585ee9512e0f2033f2fb0d7d9b2bc7
+DIST G4RadioactiveDecay.3.2.tar.gz 761070 SHA256 31dc70aa59cb86ef0dbaf96c639e0541b7569d4fc98f92064ecdc8bc4b9c839b
+DIST G4RadioactiveDecay.3.3.tar.gz 732628 SHA256 7f421d6808422f9186a8a96fc1889a54af03c80a37b9f9d1d51ab359ea0264d1
+DIST PhotonEvaporation.2.0.tar.gz 7506068 SHA256 5aac0ce683ca23274a7736c8e8911d8cf32d2bf33aab33a9a23126664762d61d
+DIST RealSurface.1.0.tar.gz 1257863 SHA256 3e2d2506600d2780ed903f1f2681962e208039329347c58ba1916740679020b1
+DIST geant321_3.21.14.dfsg-8.diff.gz 41909 SHA256 785277dab1e1d3e17d60c85f3826bc67bbd6de7e6a6d40ff7af901371c4d2ce1
+DIST geant321_3.21.14.dfsg-9.diff.gz 47589 SHA256 419bc2315e2692fe84b353d445cbae7af995d84a6a0290b7f9051ee041243d20
+DIST geant321_3.21.14.dfsg.orig.tar.gz 10922928 SHA256 186fe98a08ad1de39f68698a09a46e7c2f14c37b22f8f990257b0bd66215c5b4
+DIST geant4.9.2.p02.tar.gz 18822956 SHA256 4d19bb76bf956004481bc433bf4735780ccc6354d3dc53321d532fd283243078
+DIST geant4.9.4.p03.tar.gz 25241424 SHA256 5090ca5b506238f16ba2ae2176221a18b6fde06f91180850a109fae1006910c0
+DIST geant4.9.5.p01.tar.gz 28466803 SHA256 451f8c4a29bb0dc4b923d59d77535a657f0f8a30dc6c8ef639c8b1ebdb26a10e
+DIST geant4.9.5.tar.gz 28458437 SHA256 b6b31752319805052fb765f89ca38a23fb299a0a5bf900daeacd1950d6c9a597
+EBUILD geant-3.21.14-r2.ebuild 1868 SHA256 8d4dfa3e6217f4eb325d462456eba42e303f2eeea20a01dddf9cc4c27735e682 SHA512 f0dee71cbfb50b4d321b11ac29d55e31e5b989569cf7b08933bb92f88785c328caa534623ea3fea6b32b196f2d22fc3c6cd381b3111a717dc0ae22f60f25d94d WHIRLPOOL 20b7f439b2f01e6d44bae80438f7c90bbd99a66f927c12cbb62826c86892003303ff34d2aef92b02e95ccfcdef5274e57bbf77b0987885a22516d03f4c322f31
+EBUILD geant-3.21.14-r3.ebuild 1695 SHA256 cc54c31c5fa66b8b385c517a4b40eb1896ed6d899639f835834180381e9c7175 SHA512 c966be8d6f931e92388a4706cc26de5d273cbeb65de3086dfa5e3154cc7c0afb32efb807b13105acedc607597fa60af26b29d4ce39b3013c94a2b7558edda43c WHIRLPOOL f7d8f231464d645f634a3fc51b1bf4e20fa3a725407a6ec6cda402a38872faba41a4ca0dadc0cd7cf9078dd82d0ec2c01274dba861612d3f59bcdeef4e388e78
+EBUILD geant-4.9.2_p02.ebuild 8133 SHA256 0a96f0bbdf547c3d54ff1dc991526ce5aa8495551250f6cc4cd8ac684b52a958 SHA512 06aa3e595515823cb9139cb3acea8afb8ed388ecffb01e31fd062dd94ee408516f8918f365175c97a271954876932ed8f590aeeba0fc4b0ba168c0b4c4ad5587 WHIRLPOOL e0bc3be42d57473b798516a02b801af5aab14b688682801d20c1b18ca48f4f51b778e0ac309005096933aacb4da2693453cf412ae8c472bf66443835c9625a04
+EBUILD geant-4.9.4_p03.ebuild 2377 SHA256 f836adf68676439be4e6c155ca39bc5ca7c220954c6156a7e8a007cf930eda3a SHA512 fb08dede3c779b1d547aba9a6a45f5f8bdcb8f1fbf8aad3921d80da271c4d366103dd12291c2a6759d814d7348ecb8386dca265216c6ab467300136438bfcb8f WHIRLPOOL e0d05c95f0d333934a7df2622801d1c6c12de0dee54bdce268760e64445cde94fad5aa85d429c80a540adccfc34bf6b42a7e40fac855ef4e11a9f1dc5dd723fd
+EBUILD geant-4.9.5-r1.ebuild 3032 SHA256 5a80e94cadb5ebfb80f583e784590bfda6c24a8493da67bb44df09414ad80de7 SHA512 60d77f1c9c1b57eab93485b78bc6ff76f9660c175a1eab68c68860084e3cd0aeb26083c64a14ba84e0e34a430bcbfb13b2ca3db0a2e710ddbb1ad1c85f80a103 WHIRLPOOL 913f1231f0a2ecc44b1c4c5f19ab5e17689938234868cd34853706731826fcd97061901677a23ef46a41a0123b85f46050ed37201f19df6aa38b0ddaa4b10740
+EBUILD geant-4.9.5_p01.ebuild 3026 SHA256 e5f683a9beab9f2a5753450c7d797b93193fb63e60156bf340ef686306ed9cc8 SHA512 6901ecdfd832c01aedecdfec2241b55b7f7d15ce9959348de892d63714107c7ba59b3fa84126b2d0b480ee993e78697c8323d708865801c8405219f60079a0e6 WHIRLPOOL 4f304938084e655aaac96962121fc092bf26d92ebdfe28ff03cbbca80d6442eaa8c49dc7c126e39a9c12399f93c9bd0738d0069987601ec34065538660514a2f
+MISC ChangeLog 12769 SHA256 83edb93a915a579ce92ed873536a20700b0c5d8f67f8be71f776b2019b58a387 SHA512 8afd2cabf9a6611e217df7ac0cfd2bf674896673a8de6260479e1cd95e7bdc8b9a8fb64bf513a74af5febef02fbe015b0b288165efc6c36b5e4c9b3797336730 WHIRLPOOL b4e0ea95493f25bcb80663310287f5a2d48ceee3f9fd8bbd79e5525787728ed362838723dbfe9876cfc090fa514b5870fe51d5fc7c5ba5a8ee95b46d99cdc5d2
+MISC metadata.xml 1569 SHA256 532c396760c97bbf207439e4f189679bbe02fda61d33446beeebc5f855b36f63 SHA512 f675415df5040df08ad490c3118eb49dc6cb729c23abeb5521608f22b24ad6a74bfe1198bf2af8a2e8eae30cc0759fbe3f0d1b6ec6209d7204cdbd1d5ebb330e WHIRLPOOL b0e3b6b023d817de186740dd47e0593c1574c68915b546d78f75dc97374ed6c23988aa9a6dbdd7ef866f388dbd1d399a6f218857a75e2cec5d856b527a4d2203
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+Comment: GPGTools - http://gpgtools.org
+
+iEYEAREIAAYFAlB9rsUACgkQgAnW8HDreRYlVwCaA00QNNnOvOf4DnpsxPvnLy08
+mpIAoIcaojlOqeMCUPABJTiTr+Fh3xWV
+=zrJ6
+-----END PGP SIGNATURE-----
