@@ -1,8 +1,9 @@
-# Copyright 1999-2011 Gentoo Foundation
+# Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sci-physics/geant/geant-3.21.14-r3.ebuild,v 1.1 2011/07/21 16:50:54 bicatali Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-physics/geant/geant-3.21.14-r3.ebuild,v 1.2 2012/10/16 19:00:19 jlec Exp $
 
 EAPI=4
+
 inherit eutils fortran-2
 
 DEB_PN=geant321
@@ -12,21 +13,20 @@ DEB_P=${DEB_PN}_${DEB_PV}
 
 DESCRIPTION="CERN's detector description and simulation Tool"
 HOMEPAGE="http://wwwasd.web.cern.ch/wwwasd/geant/"
-
-LICENSE="GPL-2 LGPL-2 BSD"
-SRC_URI="mirror://debian/pool/main/${DEB_PN:0:1}/${DEB_PN}/${DEB_P}.orig.tar.gz
+SRC_URI="
+	mirror://debian/pool/main/${DEB_PN:0:1}/${DEB_PN}/${DEB_P}.orig.tar.gz
 	mirror://debian/pool/main/${DEB_PN:0:1}/${DEB_PN}/${DEB_P}-${DEB_PR}.diff.gz"
 
-KEYWORDS="~amd64 ~x86"
 SLOT="3"
+LICENSE="GPL-2 LGPL-2 BSD"
+KEYWORDS="~amd64 ~x86"
 IUSE=""
 
-RDEPEND=">=x11-libs/openmotif-2.3:0
-	virtual/fortran
+RDEPEND="
+	x11-libs/openmotif:0
 	dev-lang/cfortran
 	sci-physics/cernlib
 	sci-physics/paw"
-
 DEPEND="${RDEPEND}
 	virtual/latex-base
 	x11-misc/imake
