@@ -1,6 +1,6 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sci-physics/geant/geant-4.9.4_p03.ebuild,v 1.3 2012/07/04 08:11:27 jdhore Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-physics/geant/geant-4.9.4_p03.ebuild,v 1.4 2012/10/16 19:00:19 jlec Exp $
 
 EAPI=4
 
@@ -33,7 +33,7 @@ SLOT="4"
 KEYWORDS="amd64 x86"
 IUSE="+data dawn examples gdml geant3 granular qt4 static-libs vrml zlib"
 
-RDEPEND="virtual/fortran
+RDEPEND="
 	>=sci-physics/clhep-2.1
 	qt4? ( x11-libs/qt-gui:4 x11-libs/qt-opengl:4 )
 	gdml? ( dev-libs/xerces-c )
